--- a/2024-02-27-debian-12-emacs.org
+++ b/2024-02-27-debian-12-emacs.org
@@ -568,7 +568,7 @@ here is the hack how to add all folders to =load-path= at once:
  need to restart your favourite editor.
 
  
-* System-wide ~Emacs~ settings
+* System-wide ~Emacs~ Settings
 
 In several cases it is reasonable to put a large hunk of some
 configuration into a separate fine and include it into main user's
@@ -579,6 +579,6 @@ config =~/.emacs= in a single string:
 #+end_src
 
 
-* Per-user settings
+* Per-user Settings
 
-* Personal package management
+* Personal Package Management
