Info system is incomplete by default

--- a/2024-02-27-debian-12-emacs.org
+++ b/2024-02-27-debian-12-emacs.org
@@ -586,3 +586,8 @@ config =~/.emacs= in a single string:
 * Per-user Settings
 
 * Personal Package Management
+
+
+* Info System Extension
+--Seems it is require `emacs-common-non-dfsg` installation
++python3.11-doc
